changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

CRE: expose 'item' as an Object instead of an Archetype to scripting engine.
Makes things much easier.
Nicolas Weeger 2010-04-22

CRE: ac and wc as properties for objects.
Nicolas Weeger 2010-04-22

random_maps/treasure.c
- Make sure random map dungeon level numbers on signs and keys match up and
  make sense.  This is an off-by-one issue.
include/map.h
- Change mapstruct members enter_x and enter_y to sint16 since it appears that
  most other server code uses sint16 types for map coordinates, and the change
  results in dropping some -Wconversion warnings.  Use of -1,-1 in an exit is
  now the way to mark it the defaults set in the map are used without having
  to set them in the exit.  It may be odd to have -1,-1 in a map (mapstruct),
  but it still seems better to have type consistency.  Also fix up the broken
  doxygen comment on these items, and add some content detail.
Kevin Bulgrien 2010-04-21

Simplify code.
Nicolas Weeger 2010-04-21

CRE: export attack types values to scripting.
Nicolas Weeger 2010-04-18

CRE: export object's attacktype to scripting.
Nicolas Weeger 2010-04-18

CRE: display items count, and if filtered total count.
Nicolas Weeger 2010-04-18

Fix unit test for accounts when tmp files are still around.
Nicolas Weeger 2010-04-18

Fix invalid attack roll handling in easy cases.
Nicolas Weeger 2010-04-18

CRE: export some properties for formulae.
Nicolas Weeger 2010-04-18

CRE: set a better progress caption.
Nicolas Weeger 2010-04-17

CRE: show report generation progress, enable cancelling.
Nicolas Weeger 2010-04-17
