@@ -965,7 +965,7 @@ static void help(void) {
     printf(" -o           Prints out info on what was defined at compile time.\n");
     printf(" -s           Display the high-score list.\n");
     printf(" -score <name or class> Displays all high scores with matching name/class.\n");
-    printf(" -v           Print version and contributors.\n");
+    printf(" -v           Print version and developer contact information.\n");
     printf(" -conf        Sets the configuration dir (settings, motd, etc.)\n");
     printf(" -data        Sets the lib dir (archetypes, treasures, etc.)\n");
     printf(" -local       Read/write local data (hiscore, unique items, etc.)\n");
