@@ -84,7 +84,8 @@ void version(object *op) {
                          "This is Crossfire v%s",
                          FULL_VERSION);
     draw_ext_info(NDI_UNIQUE, 0, op, MSG_TYPE_ADMIN, MSG_TYPE_ADMIN_VERSION,
-                  "The authors can be reached at crossfire@metalforge.org", NULL);
+                  "The authors can be reached at crossfire@metalforge.org",
+"The authors can be reached at crossfire@metalforge.org");
 }
 
 /**
