@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Replace [NULL] from response to command-line `crossfire-server -v` with the
+same text that is sent back to a client when it requests server version.
+Make `crossfire-server -help` information for -v more accurate to current
+function.
+Kevin Bulgrien 2010-04-24
+
 CRE: expose 'item' as an Object instead of an Archetype to scripting engine.
 Makes things much easier.
 Nicolas Weeger 2010-04-22
